<resources>
    <string name="app_name">bookshelf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_bookshelf">所有</string>
    <string name="book_image_txt">书籍图片</string>
    <string name="book_title">此处放书籍名字</string>
    <string name="book_detail">此处放书籍详情</string>
    <string name="book_writer">此处放书籍作者</string>
    <string name="book_code">此处放书籍编码</string>
    <string name="book_publisher">此处放书籍出版社</string>
    <string name="book_partner">此处放书籍译者</string>
    <string name="book_date">2019-04</string>
    <string name="book_note">此处添加笔记</string>
    <string name="book_tag">此处添加标签</string>
    <string name="book_bookshelf">此处添加书架</string>
    <string name="book_url">https://book.douban.com/</string>
    <string name="menu_main_delete_bookshelf">删除书架</string>
    <string name="menu_main_delete_label">删除标签</string>
    <string name="menu_main_rename_bookshelf">重命名书架</string>
    <string name="menu_main_rename_label">重命名标签</string>
    <string name="menu_main_search">搜索</string>
    <string name="menu_multi_select_item_add_label">添加标签</string>
    <string name="menu_main_sort">排序</string>
    <string name="menu_multi_select_item_delete">删除</string>
    <string name="book_info_source">信息(来源:DouBan.com)</string>
    <string name="edit_book_headertitle">编辑书籍详情</string>
    <string name="edit_book_headerreturn">x</string>
    <string name="edit_book_save">保存</string>


    <string name="title_activity_setting_combine">Setting_combine</string>


    <string name="net_edit"><u>                           </u></string>
    <string name="title_activity_guanyu_activity">Guanyu_activity</string>
    <string name="title_activity_guanyu_basic">guanyu_basic</string>

    <style name="MyDialog" parent="android:Theme.Dialog">
        <!-- 背景颜色及透明程度 -->
        <item name="android:windowBackground">@android:color/transparent</item>
        <!-- 是否半透明 -->
        <item name="android:windowIsTranslucent">false</item>
        <!-- 是否没有标题 -->
        <item name="android:windowNoTitle">true</item>
        <!-- 是否浮现在activity之上 -->
        <item name="android:windowIsFloating">true</item>
        <!-- 是否背景模糊 -->
        <item name="android:layout_marginTop">20dp</item>
        <item name="android:layout_width">1400dp</item>
        <item name="android:layout_height">2200dp</item>
        <item name="android:fadeScrollbars">true</item>
        <item name="android:backgroundDimEnabled">true</item>
        <!-- 设置背景模糊的透明度-->
        <item name="android:backgroundDimAmount">0.5</item>
    </style>
    <string name="left_arrow">\u2190</string>
    <string name="ASL">Copyright (C) 2011 The Android Open Source Project Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. </string>
    <string name="FAB">Copyright 2015 Dmytro Tarianyk Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. </string>
    <string name="RET">Copyright 2013 Square, Inc. Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. </string>
    <string name="MD">The MIT License (MIT) Copyright (c) 2014-2016 Aidan Michael Follestad Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. </string>
    <string name="ASAL">Copyright (C) 2016 Jacob Klinker Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. </string>
    <string name="MDRA">Copyright 2016 Mike Penz Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. </string>

</resources>
