<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_book_toolbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/AppTheme.PopupOverlay"
    android:background="?attr/colorPrimaryDark">

    <TextView
        android:id="@+id/edit_book_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_book_headerreturn"
        android:textSize="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_book_headertitle"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/edit_book_save_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_book_save"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="end"
        android:textColor="@color/white"
        />

</android.support.v7.widget.Toolbar>