<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item_relative_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:padding="6dp">

    <ImageView
        android:id="@+id/list_book_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/book_img_default"
        android:contentDescription="@string/book_image_txt" />

    <TextView
        android:id="@+id/list_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:singleLine="true"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/font_color"
        android:layout_alignTop="@id/list_book_image"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:paddingBottom="5dp"
        android:text="@string/book_title" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/list_book_title"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/list_book_detail"
            android:layout_width="0dp"
            android:layout_weight="12"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/font_color"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/book_detail" />


        <TextView
            android:id="@+id/list_book_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            android:text="@string/book_date"
            android:textColor="@color/date_color" />

    </LinearLayout>


</RelativeLayout>