<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_marginLeft="60px"
    android:layout_height="545dp">
    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="545dp"

        android:layout_centerInParent="true"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="开源许可\nNotice for libraries:"
            android:textColor="#000000" />
        <TextView

            android:layout_width="322dp"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Android Support Library"
            android:textColor="#000000" />

        <TextView

            android:layout_width="285dp"
            android:layout_height="wrap_content"

            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ASL"
            android:textColor="#000000" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Android Support Library"
            android:textColor="#000000" />

        <TextView

            android:layout_width="287dp"
            android:layout_height="wrap_content"

            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ASL"
            android:textColor="#000000" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Retrofit"
            android:textColor="#000000" />

        <TextView

            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="Apache License, Version 2.0"
            android:textColor="#000000" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Retrofit"
            android:textColor="#000000" />

        <TextView

            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/RET"
            android:textColor="#000000" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Material Dialogs"
            android:textColor="#000000" />

        <TextView

            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/MD"
            android:textColor="#000000" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Android Sliding Activity Library"
            android:textColor="#000000" />

        <TextView

            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/MD"
            android:textColor="#000000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*MaterialDrawer"
            android:textColor="#000000" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/MD"
            android:textColor="#000000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*TinyPinyin"
            android:textColor="#000000" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="Apache License,Version 2.0"
            android:textColor="#000000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*SearchView"
            android:textColor="#000000" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="Apache License,Version 2.0"
            android:textColor="#000000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*Google Material Design Icons"
            android:textColor="#000000" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="Apache License,Version 2.0"
            android:textColor="#000000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="#ffffff"
            android:padding="10dp"
            android:text="*NoNonsense-FilePicker"
            android:textColor="#000000" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="#666666"
            android:gravity="center"
            android:padding="10dp"
            android:text="Mozilla Public License Version 2.0"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/close"
            android:textColor="@color/icontred"
            android:text="close"

            android:layout_marginLeft="530px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="330px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
</RelativeLayout>